--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -15,6 +15,11 @@
   border-radius: 30px;
 }
 
+.picture {
+  width: 150px;
+  border-radius: 50%;
+}
+
 @media screen and (max-width: 966px) {
   .heroBanner {
     padding: 2rem;
@@ -22,8 +27,9 @@
 }
 
 .socialButton {
+  display: flex;
   border-radius: 50%;
-  padding: 15px 18px;
+  padding: 20px;
 }
 
 .social {
@@ -46,6 +52,8 @@
 }
 
 .featureImage {
-  height: 200px;
-  width: 200px;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  padding: 20px;
 }
